# barbican-tempest-plugin

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
barbican_tempest_plugin/: README.rst  __init__.py  clients.py  config.py  plugin.py
barbican_tempest_plugin/services/key_manager/json/: __init__.py  base.py  consumer_client.py  container_client.py  order_client.py  quota_client.py  secret_client.py  secret_metadata_client.py  secret_stores_client.py  transport_key_client.py
barbican_tempest_plugin/services/key_manager/v1_1/: __init__.py  secret_consumer_client.py  version_client.py
barbican_tempest_plugin/tests/: base.py  test_barbican_tempest_plugin.py
barbican_tempest_plugin/tests/api/: base.py  test_consumers.py  test_containers.py  test_cve_2022_3100.py  test_orders.py  test_quotas.py  test_secret_consumers.py  test_secret_metadata.py  test_secrets.py
barbican_tempest_plugin/tests/rbac/v1/: base.py  test_containers.py  test_orders.py  test_quotas.py  test_secret_metadata.py  test_secret_stores.py  test_secrets.py  test_transport_keys.py
barbican_tempest_plugin/tests/scenario/: barbican_manager.py  manager.py  test_certificate_validation.py  test_ephemeral_disk_encryption.py  test_image_signing.py  test_volume_encryption.py
releasenotes/notes/: consistent-enforce_scope-option-d3ddf50423e1efaa.yaml  drop-python38-support-6c2833c61d2fa750.yaml
tools/: pre_test_hook.sh
