[metadata]
name = barbican_tempest_plugin
summary = OpenStack barbican tempest tests.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
requires-python = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    barbican_tempest_plugin

[entry_points]
tempest.test_plugins =
    barbican_tests = barbican_tempest_plugin.plugin:BarbicanTempestPlugin
