[metadata]
name = barbican_tempest_plugin
summary = OpenStack barbican tempest tests.
long_description = file: README.rst
author = OpenStack
author_email = openstack-dev@lists.openstack.org
url = http://www.openstack.org/
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    barbican_tempest_plugin

[entry_points]
tempest.test_plugins =
    barbican_tests = barbican_tempest_plugin.plugin:BarbicanTempestPlugin
